<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/white">
    <include layout="@layout/activity_top_hold"/>
    <sochat.so.com.android.view.DropZoomScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">
            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:src="@drawable/woosii_vr_meachine"
                android:layout_gravity="center"
                />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_deposit"
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:src="@drawable/yajin"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        />
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/tv_yajin_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="押金"
                        android:layout_toRightOf="@+id/iv_deposit"
                        android:layout_alignTop="@+id/iv_deposit"
                        android:layout_alignBottom="@+id/iv_deposit"
                        android:gravity="center"
                        android:textSize="@dimen/textBiggerSize"
                        android:textColor="@color/mainTextColor"

                        />
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="(可退)"
                        android:layout_toRightOf="@+id/tv_yajin_text"
                        android:layout_alignTop="@+id/iv_deposit"
                        android:layout_alignBaseline="@+id/tv_yajin_text"
                        android:textSize="@dimen/textSmallerSize"
                        android:textColor="@color/mainTextColor"/>
                    <TextView
                        android:id="@+id/tv_money"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="4999"
                        android:layout_toLeftOf="@+id/tv_yuan_text"
                        android:layout_alignTop="@+id/iv_deposit"
                        android:layout_alignBottom="@+id/iv_deposit"
                        android:gravity="center"
                        android:textSize="@dimen/textBiggerSize"
                        android:textColor="@color/red"/>
                    <TextView
                        android:id="@+id/tv_yuan_text"
                        android:layout_alignParentRight="true"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="元"
                        android:layout_alignTop="@+id/iv_deposit"
                        android:layout_alignBottom="@+id/iv_deposit"
                        android:gravity="center"
                        android:textSize="@dimen/textBiggerSize"
                        android:textColor="@color/mainTextColor"/>

                    <TextView
                        android:layout_marginTop="15dp"
                        android:layout_alignLeft="@+id/tv_yajin_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vr_rent_yajin"
                        android:textColor="@color/mainTipColor"
                        android:textSize="@dimen/textSmallerSize"
                        android:layout_below="@+id/iv_deposit"
                        android:lineSpacingMultiplier="1.2"
                        />



                </RelativeLayout>
                <RelativeLayout
                    android:layout_marginTop="20dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">
                    <ImageView
                        android:id="@+id/iv_canshu"
                        android:layout_width="20dp"
                        android:layout_height="30dp"
                        android:src="@drawable/shuoming"
                        android:paddingTop="5dp"
                        android:paddingBottom="5dp"
                        />
                    <TextView
                        android:layout_marginLeft="10dp"
                        android:layout_marginRight="10dp"
                        android:id="@+id/tv_canshu_text"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="参数："
                        android:layout_toRightOf="@+id/iv_canshu"
                        android:layout_alignTop="@+id/iv_canshu"
                        android:layout_alignBottom="@+id/iv_canshu"
                        android:gravity="center"
                        android:textSize="@dimen/textBiggerSize"
                        android:textColor="@color/mainTextColor"

                        />

                    <TextView
                        android:layout_marginTop="15dp"
                        android:id="@+id/tv_text1"
                        android:layout_alignLeft="@+id/tv_canshu_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="品牌："
                        android:textColor="@color/mainTipColor"
                        android:textSize="@dimen/textSmallerSize"
                        android:layout_below="@+id/tv_canshu_text"
                        android:paddingBottom="5dp"
                        />
                    <TextView
                        android:id="@+id/tv_text2"
                        android:layout_alignLeft="@+id/tv_canshu_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vr_rent_vr_chanping_xinghao"
                        android:textColor="@color/mainTipColor"
                        android:textSize="@dimen/textSmallerSize"
                        android:layout_below="@+id/tv_text1"
                        android:paddingBottom="5dp"
                        />
                    <TextView
                        android:id="@+id/tv_text3"
                        android:layout_alignLeft="@+id/tv_canshu_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vr_rent_vr_jianrong_xinghao"
                        android:textColor="@color/mainTipColor"
                        android:textSize="@dimen/textSmallerSize"
                        android:layout_below="@+id/tv_text2"
                        android:paddingBottom="5dp"
                        />
                    <TextView
                        android:id="@+id/tv_text4"
                        android:layout_alignLeft="@+id/tv_canshu_text"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="@string/vr_rent_vr_info"
                        android:textColor="@color/mainTipColor"
                        android:textSize="@dimen/textSmallerSize"
                        android:layout_below="@+id/tv_text3"
                        android:paddingBottom="5dp"
                        android:lineSpacingMultiplier="1.2"
                        />

                </RelativeLayout>

            </LinearLayout>

        </LinearLayout>

    </sochat.so.com.android.view.DropZoomScrollView>
    <TextView
        android:id="@+id/tv_pay"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginRight="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginBottom="30dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/selector_login_or_register_pressed"
        android:layout_gravity="center_horizontal"
        android:gravity="center"
        android:text="立即租用"
        android:textSize="18sp"
        android:textColor="#ffffff"
        />

</LinearLayout>